Fix long URLs breaking out of article bounds on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,6 +128,13 @@ code {
     overflow-wrap: break-word;     /* Renamed property in CSS3 draft spec */
 }
 
+/* Fix long URLs breaking out of article bounds on mobile */
+a {
+    word-break: break-word;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
+
 /* -- Chroma Highlight -- */
 /* Background */
 .prose .chroma {
